@@ -1,8 +1,8 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.11.0
+VERSION=1.11.1
 
-DEPENDENCY="zeda=1.6.30;zm=1.4.10"
+DEPENDENCY="zeda=1.6.36;zm=1.5.1"
 
 # DAE (COLLADA)
 CONFIG_USE_DAE=y
